<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/allViews"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/welcome_background"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.sen.mycontractor.SelectionOfStatus">

    <TextView
        android:id="@+id/welcomeTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_10"
        android:paddingLeft="@dimen/padding_10"
        android:text="@string/select_status_text"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/textsize_18"
        android:fontFamily="sans-serif"/>

    <FrameLayout
        android:id="@+id/hireBtn"
        android:layout_width="@dimen/padding_300"
        android:layout_height="@dimen/button_size"
        android:layout_below="@+id/welcomeTv"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/padding_100"
        android:background="@drawable/btn_click"
        android:clickable="true">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_home_24dp"
            android:layout_gravity="center_vertical"
            android:paddingLeft="@dimen/padding_20"
            android:id="@+id/house"/>

        <TextView
            android:id="@+id/sText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/hire_button"
            android:textColor="@color/white"
            android:textSize="@dimen/textsize_18"
            android:textStyle="bold"
            android:paddingLeft="@dimen/padding_40"
            android:fontFamily="sans-serif"/>

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="@dimen/progress_bar_size"
            android:layout_height="@dimen/progress_bar_size"
            android:layout_gravity="center"
            android:visibility="invisible" />

    </FrameLayout>

    <View
        android:id="@+id/revealView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:visibility="invisible" />

    <FrameLayout
        android:id="@+id/beingHiredBtn"
        android:layout_width="@dimen/padding_300"
        android:layout_height="@dimen/button_size"
        android:layout_below="@+id/hireBtn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/padding_100"
        android:background="@drawable/btn_click"
        android:clickable="true">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_repair_24dp"
            android:layout_gravity="center_vertical"
            android:paddingLeft="@dimen/padding_20"
            android:id="@+id/repair"/>

        <TextView
            android:id="@+id/sText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/beingHired_button"
            android:textColor="@color/white"
            android:textSize="@dimen/textsize_18"
            android:textStyle="bold"
            android:fontFamily="sans-serif"/>

        <ProgressBar
            android:id="@+id/progress_bar2"
            android:layout_width="@dimen/progress_bar_size"
            android:layout_height="@dimen/progress_bar_size"
            android:layout_gravity="center"
            android:visibility="invisible" />
    </FrameLayout>
    <View
        android:id="@+id/revealView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:visibility="invisible" />


    <TextView
        android:id="@+id/about_us"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/padding_20"
        android:layout_centerHorizontal="true"
        android:clickable="true"
        android:text="@string/About"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/textsize_13"
        android:fontFamily="sans-serif"/>
</RelativeLayout>
