<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/welcome_background"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.sen.mycontractor.customer.CustomerLogin">


    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:orientation="vertical">

            <AutoCompleteTextView
                android:id="@+id/emailAutoTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/text_input"
                android:fontFamily="sans-serif"
                android:hint="Email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:paddingLeft="10dp" />

            <EditText
                android:id="@+id/passwordEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/text_input"
                android:fontFamily="sans-serif"
                android:hint="Password"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingLeft="10dp" />

            <TextView
                android:id="@+id/reset_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_15"
                android:clickable="true"
                android:text="Forget password?click me."
                android:textColor="@color/white"
                android:fontFamily="sans-serif"
                android:textStyle="italic"/>

            <Button
                android:id="@+id/emailLoginBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/btn_click"
                android:fontFamily="sans-serif"
                android:text="@string/action_sign_in"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/textsize_18"
                android:textStyle="bold" />

            <Button
                android:id="@+id/registerBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/btn_click"
                android:fontFamily="sans-serif"
                android:text="@string/register"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/textsize_18"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
