<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/welcome_background"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/post_edit_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/header_bar_height"
            android:layout_marginTop="10dp"
            android:gravity="top">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="sans-serif"
                android:paddingLeft="10dp"
                android:text="@string/upload_images_text"
                android:textColor="@color/black"
                android:textSize="@dimen/textsize_18" />


        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dividing_line_width_height"
            android:background="@color/white" />


        <HorizontalScrollView
            android:id="@+id/post_scrollview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:paddingBottom="@dimen/padding_10"
            android:scrollbars="none">

            <LinearLayout
                android:id="@+id/post_pic_container"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/size_100"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/padding_10"
                android:paddingRight="@dimen/padding_10">

                <com.sen.mycontractor.customer.widget.FilterImageView
                    android:id="@+id/post_add_pic"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/add_images" />
            </LinearLayout>

        </HorizontalScrollView>


        <TextView
            android:id="@+id/post_pic_remain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right|center_vertical"
            android:paddingBottom="@dimen/padding_5"
            android:paddingRight="@dimen/padding_10"
            android:text="0/9"
            android:textColor="@color/white"
            android:textSize="@dimen/textsize_15" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dividing_line_width_height"
            android:background="@color/white" />
    </LinearLayout>
    <TextView
        android:id="@+id/upLoadingView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/textsize_18"
        android:fontFamily="sans-serif"
        android:text="@string/upLoading"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/useImagesBtn"
        android:layout_marginBottom="10dp"
        android:gravity="center_vertical|center_horizontal"
        android:layout_centerVertical="true"
        android:visibility="gone"/>
    <Button
        android:id="@+id/useImagesBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@drawable/btn_click"
        android:text="@string/next_step"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/textsize_18"
        android:textStyle="bold"
        android:fontFamily="sans-serif"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        />
    <ProgressBar
        android:id="@+id/progress_bar_use_images"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_gravity="center"
        android:visibility="invisible"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="2dp"
        android:layout_centerHorizontal="true"/>
    <FrameLayout
        android:id="@+id/pagerview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <com.sen.mycontractor.customer.widget.AlbumViewPager
            android:id="@+id/albumviewpager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/album_item_bg" />

        <include
            android:id="@+id/album_item_header_bar"
            layout="@layout/album_item_header_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top" />
    </FrameLayout>


</RelativeLayout>